--- a/main.html
+++ b/main.html
@@ -9,13 +9,15 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h1>Testimonials</h1>
+	<div>
 	<div class="box">
-	<div>This product is amazing I highly recommend it to anyone in need of solution like this.</div>
+	<p>This product is amazing I highly recommend it to anyone in need of solution like this.</p>
 	<p>- John Doe</p>
 	</div>
 	<div class="box">
-	<div>I have been using this for weeks now and it has been completely transformed my workflow.</div>
+	<p>I have been using this for weeks now and it has been completely transformed my workflow.</p>
 	<p>- Jane Smith</p>
+	</div>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
